tests/NormalTests/paczka1/fuzzy1/91270128.err
Error in line 11: A282 A847 47,9
Error in line 3: FU7Aq A847 29,0
Error in line 9: 0laUh6 S773 99,1
Error in line 19: SIvZ A282 54,1
Error in line 25: SIvZ S773 91,9
Error in line 33: SIvZ A359 71,2
